# zenoo-rpc

./: .env.example  .gitignore  .gitignore_temp  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SECURITY_SETUP.md  bandit-report-fixed.json  codecov.yml  coverage.json  demo.py  dev-requirements.txt  docker-compose.test.yml  mkdocs.yml  pyproject.toml  pyproject_poetry.toml  setup-test-redis.sh  test_codecov.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  publish.yml
deployment/: Dockerfile.production  docker-compose.production.yml
deployment/config/: production.yaml
deployment/k8s/: zenoo-rpc-deployment.yaml
deployment/scripts/: deploy.sh  healthcheck.py
docs/: README.md  ai-features.md  index.md  requirements.txt  robots.txt
docs/advanced/: architecture.md  extending.md  extensions.md  index.md  performance.md  security.md
docs/ai-integration/: ai-integration-proposal.md
docs/api-reference/: client.md  index.md  manager.md
docs/architecture/: analysis-summary.md  comprehensive-analysis.md
docs/contributing/: development.md  documentation.md  release.md  testing.md
docs/examples/: index.md
docs/getting-started/: installation.md  migration.md  quickstart.md
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/troubleshooting/: common-issues.md  debugging.md  faq.md  monitoring.md
docs/tutorials/: basic-crud.md  (+4 more)
examples/: advanced_orm.py  ai_features_demo.py  basic_usage.py  batch_operations.py  nested_query_test.py  phase2_demo.py  phase2_integration_demo.py  phase3_demo.py  real_odoo_test.py  simple_odoo_test.py  transactions.py
scripts/: publish_to_pypi.sh  setup-test-redis.sh  upload_coverage.sh  validate_env.py
tests/: __init__.py  base.py  conftest.py  test_ai_integration.py  test_batch_comprehensive.py  test_batch_context.py  test_batch_context_managers.py  test_batch_exceptions.py  test_batch_execution.py  test_batch_executor.py  test_batch_operation_collector.py  test_batch_progress_tracker.py  test_cache_backends_advanced.py  test_cache_comprehensive.py  test_cache_decorators.py  test_cache_exceptions.py  test_cache_keys.py  test_cache_manager.py  test_circuit_breaker.py  test_client.py  test_client_advanced.py  test_client_comprehensive.py  test_client_simple.py  test_crud_implementation.py  test_debug_crud.py  test_enhanced_integration.py  test_exceptions.py  test_exceptions_mapping.py  test_httpx_transport.py  test_integration_comprehensive.py  test_lazy_loading.py  test_mcp_basic.py  test_mcp_integration.py  test_models.py  test_models_common.py  test_models_comprehensive.py  test_models_fields.py  test_odoo_model.py  test_performance_benchmarks.py  test_performance_simple.py  (+23 more)
(+180 files in other folders)
